# guppi-skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
spiker/: SKILL.md  pyproject.toml
spiker/docs/design/: 2026-02-12-spiker-mvp.md
spiker/src/guppi_spiker/: __init__.py  cli.py  words.py
spiker/tests/: test_cli.py
