[project]
name = "guppi-spiker"
version = "0.1.0"
description = "Manage experimental spike projects in a centralized, searchable location"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=14.0.0",
]

[project.scripts]
guppi-spiker = "guppi_spiker.cli:app"

[tool.guppi]
name = "spiker"
description = "Manage experimental spike projects in a centralized, searchable location"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/guppi_spiker"]

[tool.hatch.build.targets.wheel.force-include]
"SKILL.md" = "guppi_spiker/SKILL.md"
